--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -200,7 +200,22 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Areas\IDSMORS\Controllers\HomeController.cs" />
     <Compile Include="Areas\IDSMORS\IDSMORSAreaRegistration.cs" />
-    <Compile Include="Controllers\api\GenusWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_WagonsConditionController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_DEPOController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_SpecialConditionsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_PoligonTravelWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_OperatorsWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_LessorsWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_OwnersWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_TypeOwnerShipController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_TypeWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_GenusWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_ModelsWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_TypesRepairsWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS_Directory_WagonManufacturersController.cs" />
+    <Compile Include="Controllers\api\UZ_Directory_InternalRailroadController.cs" />
+    <Compile Include="Controllers\api\UZ_Directory_StationsController.cs" />
+    <Compile Include="Controllers\api\UZ_Directory_StatesController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -311,6 +326,8 @@
     <Content Include="Images\portfolio\thumbnails\5.jpg" />
     <Content Include="Images\portfolio\thumbnails\6.jpg" />
     <Content Include="Scripts\api\ids_directory.js" />
+    <Content Include="Scripts\api\shared.js" />
+    <Content Include="Scripts\api\uz_directory.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -461,6 +478,7 @@
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
     <Content Include="Scripts\view\idsmors\electronic-cards.js" />
+    <Content Include="Scripts\view\shared\common.js" />
     <Content Include="Scripts\view\shared\_ids.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
