--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -87,7 +87,7 @@
     <add name="metrans"
       connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient"/>
-    <add name="IDS1"
+    <add name="IDS"
       connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient"/>
 
