--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -118,7 +118,8 @@
     <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" /><!--http://159.224.194.27:81--><!--portal.metrans.com.ua-->
     <add key="WebApiMTUser" value="Arcelor1" />
     <add key="WebApiMTPSW" value="12345678-" />
-    <add key="WebApiMTApi" value="/api/WagonsTracking" />    
+    <add key="WebApiMTApi" value="/api/WagonsTracking" />
+    <add key="aspnet:RoslynCompilerLocation" value="roslyn" />    
 
   </appSettings>
   <connectionStrings>
@@ -145,4 +146,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
 </configuration>
