--- a/MetransService/packages.config
+++ b/MetransService/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.4.0" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
 </packages>
