--- a/WEB_UI/packages.config
+++ b/WEB_UI/packages.config
@@ -7,6 +7,7 @@
   <package id="jQuery" version="3.4.1" targetFramework="net452" />
   <package id="jQuery.Cookie" version="1.4.1" targetFramework="net452" />
   <package id="jQuery.Easing" version="1.3.0.1" targetFramework="net452" />
+  <package id="jQuery.UI" version="1.12.1.1" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net452" />
   <package id="Magnific.Popup" version="1.1.0" targetFramework="net452" />
