--- a/WEB_UI/packages.config
+++ b/WEB_UI/packages.config
@@ -30,6 +30,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="Moment.js" version="2.24.0" targetFramework="net452" />
   <package id="Moveax.Mvc.ErrorHandler" version="1.2.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
